test/Fail/Issue1918.agda
-- The --no-coverage-check option has been removed.

{-# OPTIONS --no-coverage-check #-}

module Issue1918 where
