test/Fail/Issue1918.err
Issue1918.agda:3.1-36: error: [OptionError]
Option --no-coverage-check has been removed in version 2.5.1
